# RoundRobin

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
cmake/: RoundRobinConfig.cmake
examples/: CMakeLists.txt  basic_usage.cpp  thread_safety.cpp
include/round_robin/: round_robin.hpp  version.hpp
tests/: CMakeLists.txt  basic_tests.cpp  memory_leak_tests.cpp  thread_tests.cpp
